--- a/index.html
+++ b/index.html
@@ -4,6 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DiscussHub</title>
+    <!-- font awesome cdn link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <!-- daisy ui cdn links -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <header class="container mx-auto">
+      <!-- navbar starts here -->
+      <nav>
+        <div class="navbar bg-base-100 mt-4">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li>
+                  <a><i title="home" class="fa-solid fa-house fa-fw"></i></a>
+                </li>
+
+                <li>
+                  <a><i class="fa-solid fa-pen"></i></a>
+                </li>
+                <li>
+                  <a><i class="fa-solid fa-user-plus"></i></a>
+                </li>
+
+                <li>
+                  <a><i class="fa-regular fa-flag"></i></a>
+                </li>
+              </ul>
+            </div>
+            <a class="btn btn-ghost text-xl">DiscussHub</a>
+          </div>
+          <div class="navbar-end hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li>
+                <a><i title="home" class="fa-solid fa-house fa-fw"></i></a>
+              </li>
+
+              <li>
+                <a><i class="fa-solid fa-pen"></i></a>
+              </li>
+              <li>
+                <a><i class="fa-solid fa-user-plus"></i></a>
+              </li>
+
+              <li>
+                <a><i class="fa-regular fa-flag"></i></a>
+              </li>
+            </ul>
+            <div class="">
+              <a class="btn bg-[#797dfc] text-white rounded-xl">Sign In</a>
+            </div>
+          </div>
+          <div class="navbar-end lg:hidden">
+            <a class="btn bg-[#797dfc] text-white rounded-xl">Sign In</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <script src="js/main.js"></script>
+  </body>
 </html>
