added banner section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DiscussHub</title>
+    <title>DiscussHUB</title>
     <!-- font awesome cdn link -->
     <link
       rel="stylesheet"
@@ -60,7 +60,7 @@
                 </li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-xl">DiscussHub</a>
+            <a class="btn btn-ghost text-xl">DiscussHUB</a>
           </div>
           <div class="navbar-end hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -88,6 +88,62 @@
           </div>
         </div>
       </nav>
+      <!-- banner section starts here -->
+
+      <section>
+        <div class="bg-[#12132d] rounded-3xl mt-10">
+          <div
+            class="p-24 flex flex-col lg:flex-row items-center justify-around gap-10 text-white bg-[url('images/bgbanner.png')] bg-no-repeat bg-cover"
+          >
+            <!-- left side -->
+            <div class="space-y-10">
+              <h2 class="text-6xl font-extrabold">
+                Welcome to the <br />
+                DiscussHUB
+              </h2>
+              <p class="font-medium text-2xl">
+                Share your favorite opinion and win DiscussHUB coffee mug!
+              </p>
+              <!-- search field -->
+              <div class="bg-white flex justify-between rounded-3xl w-96 p-1">
+                <input
+                  class="py-3 text-black outline-none px-5 bg-transparent"
+                  type="text"
+                  placeholder="Search here anything"
+                />
+                <button
+                  class="bg-[#797dfc] rounded-3xl text-white text-lg font-bold py-2 px-6"
+                >
+                  Search
+                </button>
+              </div>
+            </div>
+            <!-- right side -->
+            <div>
+              <div class="bg-white w-60 text-black p-10 rounded-2xl">
+                <table class="w-40">
+                  <tr>
+                    <td>Registered Users</td>
+                    <td>01</td>
+                  </tr>
+                  <tr>
+                    <td>Forum</td>
+                    <td>05</td>
+                  </tr>
+                  <tr>
+                    <td>Topics</td>
+                    <td>01</td>
+                  </tr>
+                  <tr>
+                    <td>Replies</td>
+                    <td>01</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <script src="js/main.js"></script>
   </body>
