fetching all posts working

--- a/index.html
+++ b/index.html
@@ -169,51 +169,12 @@
         <!-- post section -->
         <div class="flex justify-between gap-10">
           <!-- post container -->
-          <div class="w-3/5">
+          <div id="post-container" class="w-3/5">
             <!-- post cards -->
-            <div class="p-5 mt-5 bg-[#797dfc1a] rounded-lg flex">
-              <div class="relative rounded-2xl bg-white h-14 w-14 mt-5">
-                <img class="w-full rounded-2xl" src="images/logo.png" alt="" />
-                <div
-                  class="h-3 w-3 bg-red-600 rounded-full absolute right-0 top-[-2px]"
-                ></div>
-              </div>
-              <div class="w-full">
-                <div
-                  class="border-b-2 space-y-4 border-dashed border-gray-300 p-5"
-                >
-                  <div class="flex gap-5 items-center">
-                    <p># <span>music</span></p>
-                    <p>Author : <span>Awlad hossain</span></p>
-                  </div>
-                  <h2 class="text-2xl font-bold">
-                    10 kids unaware of Their Halloween Costume
-                  </h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rem, ducimus.
-                  </p>
-                </div>
-                <div class="flex justify-between p-5">
-                  <div class="flex gap-8 items-center">
-                    <p><i class="fa-regular fa-message"></i><span>10</span></p>
-                    <p><i class="fa-regular fa-eye"></i><span>10</span></p>
-                    <p><i class="fa-regular fa-clock"></i><span>10</span></p>
-                  </div>
-                  <div>
-                    <button
-                      class="bg-green-400 w-8 h-8 rounded-full flex items-center justify-center"
-                    >
-                      <i class="fa-regular fa-envelope-open"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
 
           <!-- mark as read container -->
-          <div class="p-10 bg-[#12132d1a] rounded-2xl w-2/5">
+          <div class="p-10 bg-[#12132d1a] rounded-2xl w-2/5 h-fit">
             <!-- heading -->
             <div class="flex items-center justify-between p-5">
               <h1 class="text-3xl font-bold">Title</h1>
