mark as read functionality added

--- a/index.html
+++ b/index.html
@@ -180,19 +180,12 @@
               <h1 class="text-3xl font-bold">Title</h1>
               <div class="flex items-center text-xl">
                 <i class="fa-solid fa-check-double text-green-400"></i>
-                <p>Mark as read (<span>0</span>)</p>
+                <p>Mark as read (<span id="read-count">0</span>)</p>
               </div>
             </div>
             <!-- cards container -->
-            <div>
+            <div id="mark-as-read-container">
               <!-- cards -->
-              <div class="flex items-center justify-between p-4 rounded-lg">
-                <h1 class="text-2xl font-bold">Lorem ipsum dolor sit amet.</h1>
-                <div class="text-lg">
-                  <i class="fa-regular fa-eye"></i>
-                  <span>0</span>
-                </div>
-              </div>
             </div>
           </div>
         </div>
