search by category added

--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
               <!-- search field -->
               <div class="bg-white flex justify-between rounded-3xl w-96 p-1">
                 <input
+                  id="search-field"
                   class="py-3 text-black outline-none px-5 bg-transparent"
                   type="text"
                   placeholder="Search here anything"
                 />
                 <button
+                  onclick="searchPost()"
                   class="bg-[#797dfc] rounded-3xl text-white text-lg font-bold py-2 px-6"
                 >
                   Search
