added latest section with fetched data

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- lets discuss section -->
       <section class="mt-24">
         <!-- section heading -->
-        <div class="text-center space-y-5">
+        <div class="text-center space-y-5 mb-10">
           <h3 class="text-4xl font font-extrabold">Let's Discuss</h3>
           <p class="w-[650px] mx-auto">
             This space is designed for the curious minds eager to share
@@ -191,6 +191,48 @@
             </div>
           </div>
         </div>
+      </section>
+      <!-- join forum section -->
+      <section class="mt-24">
+        <div class="hero bg-[#12132d] text-white rounded-3xl p-14">
+          <div
+            class="hero-content flex-col lg:flex-row-reverse w-full justify-around"
+          >
+            <img
+              src="images/joinforum.png"
+              class="max-w-sm rounded-lg shadow-2xl"
+            />
+            <div>
+              <h1 class="text-5xl font-bold">Join our HUB</h1>
+              <p class="py-6 w-[650px]">
+                Welcome to DiscussHUB – where vibrant discussions come to life!
+                Join our thriving community of inquisitive minds, passionate
+                thinkers, and knowledge seekers
+              </p>
+              <button
+                class="btn-primary rounded-3xl text-xl font-bold bg-[#797dfc] py-3 px-5"
+              >
+                Registered Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- latest post section -->
+      <section class="mt-24">
+        <div class="text-center space-y-5 mb-10">
+          <h3 class="text-4xl font font-extrabold">Latest Posts</h3>
+          <p class="w-[650px] mx-auto">
+            Explore the pulse of our community with the Latest Posts section!
+            Stay at the forefront of insightful conversations, breaking news,
+            and engaging discussions.
+          </p>
+        </div>
+        <!-- latest post container  -->
+        <div
+          id="latest-post-container"
+          class="grid grid-cols-1 lg:grid-cols-3 gap-5"
+        ></div>
       </section>
     </main>
     <script src="js/main.js"></script>
