added loading spinner

--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
             perspectives, exchange ideas, and ignite engaging discussions.
           </p>
         </div>
+        <!-- loading spinner -->
+        <div class="text-center hidden" id="loading-spinner">
+          <span class="loading loading-bars loading-lg"></span>
+        </div>
         <!-- post section -->
         <div class="flex justify-between gap-10">
           <!-- post container -->
