added footer section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="space-y-10">
               <h2 class="text-6xl font-extrabold">
                 Welcome to the <br />
-                DiscussHUB
+                <span class="mt-2">DiscussHUB</span>
               </h2>
               <p class="font-medium text-2xl">
                 Share your favorite opinion and win DiscussHUB coffee mug!
@@ -239,6 +239,28 @@
         ></div>
       </section>
     </main>
+    <footer class="mt-24">
+      <div class="flex items-center bg-base-200 justify-center">
+        <div class="py-20">
+          <div class="text-center border-b-2 border-gray-400">
+            <div class="">
+              <h1 class="text-5xl font-bold">DiscussHUB</h1>
+              <p class="py-6">
+                Thank you for being a part of the DiscussHUB community.Explore,
+                engage, and grow with us
+              </p>
+              <div class="flex gap-3 justify-center mb-5">
+                <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-github fa-2xl"></i></a>
+              </div>
+            </div>
+          </div>
+          <p class="text-center mt-5">2024, All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
